fix: distorted profiles

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,5 +1,6 @@
 .profile {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), black), no-repeat center/100% url('/assets/img/background.jpg'), #946c50;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), black),
+        no-repeat center/100% url("/assets/img/background.jpg"), #946c50;
     background-size: cover;
     text-align: center;
     height: fit-content;
@@ -24,10 +25,9 @@
 
     .profile-wrapper {
         padding: 1rem;
-        max-width: 200px;
-        max-height: 200px;
-        width: 100%;
-        height: 100%;
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
         overflow: hidden;
     }
 
